# clay

./: .env.example  .env.maintainer  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.clay  Dockerfile.potter  Makefile  README.md  docker-compose.run.yml
.github/scripts/: create-release.js  sign-release-artifacts.sh
.github/workflows/: codeql.yml  release.yml
docs/: TEMPLATING.md
src/: clay.rs  potter.rs
